--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -45,7 +45,7 @@
 
 <% form.inputs :name => "Event Start and End Times" do %>
   <li id="event_start_datetime_input" class="string required">
-    <%= form.label :start_datetime, "Event Reporting Time #{required_astrix}" %>
+    <%= form.label :start_datetime, "Event Reporting Time " %><%= required_astrix %>
     <script type='text/javascript'>
       document.write("<%= escape_javascript form.calendar_date_select(:start_datetime, :time => true, :buttons => false, :valid_date_check => "date > (new Date()).stripTime()", :year_range => 0.years.ago..10.years.from_now) %> <small>(click to select date)</small>");
     </script>
@@ -53,7 +53,7 @@
   </li>
 
   <li id="event_start_datetime_input" class="string required">
-    <%= form.label :end_datetime, "Event end #{required_astrix}" %>
+    <%= form.label :end_datetime, "Event end " %><%= required_astrix %>
     <script type='text/javascript'>
       document.write("<%= escape_javascript form.calendar_date_select(:end_datetime, :time => true, :buttons => false, :valid_date_check => "date > (new Date()).stripTime()", :year_range => 0.years.ago..10.years.from_now) %> <small>(click to select date)</small>");
     </script>
