--- a/app/views/staff/_form.html.erb
+++ b/app/views/staff/_form.html.erb
@@ -29,7 +29,7 @@
                  :input_html => { :size => 7, :multiple => true } %>
 
   <li id="staff_start_date_input" class="string required">
-    <%= form.label :start_date, "Start date #{required_astrix}" %>
+    <%= form.label :start_date, "Start date " %><%= required_astrix %>
     <script type='text/javascript'>
       document.write("<%= escape_javascript form.calendar_date_select(:start_date, :time => false) %> <small>(click to select date)</small>");
     </script>
