Upgraded views to support Formtastic 2+ by replacing ... - form.buttons  with form.actions - form.commit_button with form.action :submit, :label =>

--- a/app/views/availability/_form.html.erb
+++ b/app/views/availability/_form.html.erb
@@ -78,11 +78,11 @@
     <% end %>
   <% end %>
 
-  <% form.buttons do %>
+  <% form.actions do %>
     <% label = !@availability.conflicts_with_another_availability? || !admin? ? nil :
                 (@availability.new_record? ?
                   'Ignore Conflicts and Create Availability' :
                   'Ignore Conflicts and Save Availability') %>
-    <%= form.commit_button label %>
+    <%= form.action :submit, :label => label %>
   <% end %>
 <% end %>
