--- a/app/views/availability/destroy.html.erb
+++ b/app/views/availability/destroy.html.erb
@@ -2,7 +2,7 @@
 
 <% semantic_form_for(@availability, :url => availability_form_url, :html => { :method => :delete }) do |form| %>
   <%= form.error_messages %>
-  <% form.buttons do %>
-    <%= form.commit_button :button_html => { :value => "Yes, I'm sure." } %>
+  <% form.actions do %>
+    <%= form.action :submit, :button_html => { :value => "Yes, I'm sure." } %>
   <% end %>
 <% end %>
