--- a/app/views/availability/split.html.erb
+++ b/app/views/availability/split.html.erb
@@ -11,8 +11,8 @@
       <noscript><%= form.date_select :split_date, :order => [:day, :month, :year], :include_blank => true %></noscript>
     </li>
   <% end %>
-  <% form.buttons do %>
-    <%= form.commit_button :button_html => { :value => "Split Availability" } %>
+  <% form.actions do %>
+    <%= form.action :submit, :button_html => { :value => "Split Availability" } %>
   <% end %>
 <% end %>
 
