--- a/app/views/staff/new.html.erb
+++ b/app/views/staff/new.html.erb
@@ -3,8 +3,8 @@
 <% semantic_form_for(@staff) do |form| %>
   <%= form.error_messages %>
   <%= render 'form', :form => form %>
-  <% form.buttons do %>
-    <%= form.commit_button %>
+  <% form.actions do %>
+    <%= form.action :submit %>
   <% end %>
 <% end %>
 
