--- a/app/views/staff/_staff_list_and_search.html.erb
+++ b/app/views/staff/_staff_list_and_search.html.erb
@@ -38,7 +38,7 @@
     <td class="email"><%=mail_to staff.email %></td>
     <% unless search_for_rostering || search_for_work_history %>
     <td class="control"><%= link_to 'Edit', edit_staff_path(staff) %></td>
-    <td class="control"><%= link_to 'Delete', destroy_staff_path(staff), :confirm => 'Are you sure?', :method => :delete %></td>
+    <td class="control"><%= link_to 'Delete', staff_path(staff), :confirm => 'Are you sure?', :method => :delete %></td>
     <% end %>
   </tr>
 <% end %>
