Fixing routing incompatibilities with the staff_path and Rails 3 default route helpers

--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -5,6 +5,6 @@
 <% content_for(:tools) do %>
 <ul>
   <li><%= link_to "Add Staff Member", new_staff_path %></li>
-  <li><%= link_to "Email all Staff Members", contact_all_staffs_path %></li>
+  <li><%= link_to "Email all Staff Members", contact_all_staff_index_path %></li>
 </ul>
 <% end %>
