--- a/app/views/staff/new.html.erb
+++ b/app/views/staff/new.html.erb
@@ -10,6 +10,6 @@
 
 <% content_for(:tools) do %>
   <ul>
-    <li><%= link_to 'Return to Staff List', staffs_path %></li>
+    <li><%= link_to 'Return to Staff List', staff_index_path %></li>
   </ul>
 <% end %>
