Replaced form.error_messages with form.semantic_errors which is the new syntax for showing error messages in Formtastic.

--- a/app/views/availability/_form.html.erb
+++ b/app/views/availability/_form.html.erb
@@ -1,5 +1,5 @@
 <% semantic_form_for(@availability, :url => availability_form_url) do |form| %>
-  <%= form.error_messages %>
+  <%= form.semantic_errors %>
 
   <% if @availability.conflicts_with_another_availability? %>
     <div id="errorExplanation" class="errorExplanation">
