--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,7 @@
 <% title "Editing event" %>
 
 <% semantic_form_for(@event) do |form| %>
-  <%= form.error_messages %>
+  <%= form.semantic_errors %>
   <%= render 'form', :form => form %>
   <% form.actions do %>
     <li>
