--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,7 +1,7 @@
 <% title "Change My Password" %>
 
 <% semantic_form_for @staff, :url => password_reset_path, :method => :put do |form| %>
-  <%= form.error_messages %>
+  <%= form.semantic_errors %>
   <% form.inputs :name => nil do %>
     <%= render('staff/password_fields', :form => form) %>
   <% end %>
