--- a/app/views/staff/new.html.erb
+++ b/app/views/staff/new.html.erb
@@ -1,7 +1,7 @@
 <% title "New staff member" %>
 
 <% semantic_form_for(@staff) do |form| %>
-  <%= form.error_messages %>
+  <%= form.semantic_errors %>
   <%= render 'form', :form => form %>
   <% form.actions do %>
     <%= form.action :submit %>
