Fixed ERB form_for concatenation

--- a/app/views/events/_finalize_event_roster.html.erb
+++ b/app/views/events/_finalize_event_roster.html.erb
@@ -1,7 +1,7 @@
 <div id="event_actions">
   <h3>Actions</h3>
 
-  <% form_for event do |f| %>
+  <%= form_for event do |f| %>
     <%= f.hidden_field :state, :value => Event::States[:approved] %>
     <%= f.hidden_field :ignore_event_conflicts, :value => true %>
     <%= submit_tag 'Finalize Roster for this Event' %>
