--- a/app/views/availability/_form.html.erb
+++ b/app/views/availability/_form.html.erb
@@ -1,4 +1,4 @@
-<% semantic_form_for(@availability, :url => availability_form_url) do |form| %>
+<%= semantic_form_for(@availability, :url => availability_form_url) do |form| %>
   <%= form.semantic_errors %>
 
   <% if @availability.conflicts_with_another_availability? %>
