--- a/app/views/events/cancel.html.erb
+++ b/app/views/events/cancel.html.erb
@@ -1,6 +1,6 @@
 <% title "Are you sure you want to cancel #{@event.name}?" %>
 
-<% semantic_form_for(@event, :url => { :action => 'cancel' }, :html => { :method => :delete }) do |form| %>
+<%= semantic_form_for(@event, :url => { :action => 'cancel' }, :html => { :method => :delete }) do |form| %>
   <%= form.semantic_errors %>
   <% form.actions do %>
     <%= form.action :submit, :button_html => { :value => "Yes, I'm sure." } %>
