--- a/app/views/staff/edit.html.erb
+++ b/app/views/staff/edit.html.erb
@@ -1,6 +1,6 @@
 <% title "Editing staff member: #{h(@staff.full_name)}" %>
 
-<% semantic_form_for(@staff) do |form| %>
+<%= semantic_form_for(@staff) do |form| %>
   <%= form.semantic_errors %>
   <%= render 'form', :form => form %>
   <% form.actions do %>
