--- a/app/views/staff/new.html.erb
+++ b/app/views/staff/new.html.erb
@@ -1,6 +1,6 @@
 <% title "New staff member" %>
 
-<% semantic_form_for(@staff) do |form| %>
+<%= semantic_form_for(@staff) do |form| %>
   <%= form.semantic_errors %>
   <%= render 'form', :form => form %>
   <% form.actions do %>
