--- a/app/views/rosterings/accept.html.erb
+++ b/app/views/rosterings/accept.html.erb
@@ -1,6 +1,6 @@
 <% title "Are you sure you want to accept the position of #{@role.name} at the the event '#{@event.name}'" %>
 
-<% form_tag({ :action => 'accept' }, { :method => :put }) do %>
+<%= form_tag({ :action => 'accept' }, { :method => :put }) do %>
   <%= submit_tag "Yes, I'm sure." %>
   or <%= link_to 'Back to dashboard', dashboard_path %>
 <% end %>
