--- a/app/views/staff/contact_all.html.erb
+++ b/app/views/staff/contact_all.html.erb
@@ -1,6 +1,6 @@
 <% title "Contact all staff members" %>
 
-<% form_tag({}, { :method => :post }) do %>
+<%= form_tag({}, { :method => :post }) do %>
   <%= render 'contact_form' %>
   <p>
     <%= submit_tag "Send Email to all Staff Members" %>
