--- a/app/views/password_resets/index.html.erb
+++ b/app/views/password_resets/index.html.erb
@@ -1,6 +1,6 @@
 <% title "Reset your password" %>
 
-<% form_tag password_resets_path, :method => :get do %>
+<%= form_tag password_resets_path, :method => :get do %>
   <p>
     <%= label_tag :reset_token %><br />
     <%= text_field_tag :reset_token %>
