--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -2,7 +2,7 @@
 
 <p>Fill out the form below and instructions to reset your password will be emailed to you.</p>
 
-<% form_tag password_resets_path do %>
+<%= form_tag password_resets_path do %>
   <p>
     <%= label_tag :email%><br />
     <%= text_field_tag :email %>
