--- a/app/views/reports/events.html.erb
+++ b/app/views/reports/events.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <div id="event_search">
-  <% form_tag({}, { :method => :get }) do %>
+  <%= form_tag({}, { :method => :get }) do %>
     <p>
       <%= label_tag :start_date, "Start date: " %>
       <script type='text/javascript'>
