--- a/app/views/rosterings/reject.html.erb
+++ b/app/views/rosterings/reject.html.erb
@@ -1,6 +1,6 @@
 <% title "Are you sure you want to reject #{@staff.full_name} as a #{@role.name} at this event?" %>
 
-<% form_tag({ :action => 'reject' }, { :method => :put }) do %>
+<%= form_tag({ :action => 'reject' }, { :method => :put }) do %>
   <%= submit_tag "Yes, I'm sure." %>
   or <%= link_to 'back to event', event_path(@event) %>
 <% end %>
