--- a/app/views/availability/split.html.erb
+++ b/app/views/availability/split.html.erb
@@ -11,7 +11,7 @@
       <noscript><%= form.date_select :split_date, :order => [:day, :month, :year], :include_blank => true %></noscript>
     </li>
   <% end %>
-  <% form.actions do %>
+  <%= form.actions do %>
     <%= form.action :submit, :button_html => { :value => "Split Availability" } %>
   <% end %>
 <% end %>
