--- a/app/views/staff/edit.html.erb
+++ b/app/views/staff/edit.html.erb
@@ -3,7 +3,7 @@
 <%= semantic_form_for(@staff) do |form| %>
   <%= form.semantic_errors %>
   <%= render 'form', :form => form %>
-  <% form.actions do %>
+  <%= form.actions do %>
     <%= form.action :submit, :button_html => { :value => 'Save' } %>
   <% end %>
 <% end %>
