--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 <% end %>
 
-<% content_for(:tools) do %>
+<%= content_for(:tools) do %>
   <ul>
     <li><%= link_to 'Return to Event', @event %></li>
   </ul>
