--- a/app/views/rosterings/search.html.erb
+++ b/app/views/rosterings/search.html.erb
@@ -10,7 +10,7 @@
 
 <%= render 'staff/staff_list_and_search', :search_for_rostering => true %>
 
-<% content_for(:tools) do %>
+<%= content_for(:tools) do %>
   <ul>
     <li><%= link_to 'Return to Event', @event %></li>
   </ul>
