--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'staff_list_and_search' %>
 
-<% content_for(:tools) do %>
+<%= content_for(:tools) do %>
 <ul>
   <li><%= link_to "Add Staff Member", new_staff_path %></li>
   <li><%= link_to "Email all Staff Members", contact_all_staff_index_path %></li>
