--- a/app/views/staff/new.html.erb
+++ b/app/views/staff/new.html.erb
@@ -8,7 +8,7 @@
   <% end %>
 <% end %>
 
-<% content_for(:tools) do %>
+<%= content_for(:tools) do %>
   <ul>
     <li><%= link_to 'Return to Staff List', staff_index_path %></li>
   </ul>
