--- a/app/views/staff/_form.html.erb
+++ b/app/views/staff/_form.html.erb
@@ -11,7 +11,7 @@
 <%= form.inputs :name => "Contact Details" do %>
   <%= form.input :email, :required => false %>
 
-  <% form.semantic_fields_for :contact_details do |detail| %>
+  <%= form.semantic_fields_for :contact_details do |detail| %>
     <% DetailType.all.each do |detail_type| %>
       <%= detail.input "#{detail_type.id}", :label => detail_type.name,
                        :as => detail_type.field_type.to_sym, :required => false,
