Replaced css files with less files in asset pipeline

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -1,3 +1,7 @@
+/*
+ *= require jquery-ui/datepicker
+ */
+
 body {
   background-color: #ccc;
   font-family: verdana, arial, helvetica, sans-serif;
