Applied jQ datepicker to availabilities, events report and staff forms

--- a/app/views/availabilities/_form.html.erb
+++ b/app/views/availabilities/_form.html.erb
@@ -17,17 +17,15 @@
   <%= form.inputs :name => "Availability Details" do %>
     <li class="string required">
       <%= form.label :start_date, "Start date " %><%= required_astrix %>
-      <script type='text/javascript'>
-        document.write("<%= escape_javascript form.calendar_date_select(:start_date, :time => false) %> <small>(click to select date)</small>");
-      </script>
+      <%= form.input :start_date, :as => :string, 
+        :input_html => { :id => "datepicker" } %>
       <noscript><%= form.date_select :start_date, :order => [:day, :month, :year], :include_blank => true %></noscript>
     </li>
 
     <li class="string required">
       <%= form.label :end_date, "End date " %><%= required_astrix %>
-      <script type='text/javascript'>
-        document.write("<%= escape_javascript form.calendar_date_select(:end_date, :time => false) %> <small>(click to select date)</small>");
-      </script>
+      <%= form.input :end_date, :as => :string, 
+        :input_html => { :id => "datepicker" } %>
       <noscript><%= form.date_select :end_date, :order => [:day, :month, :year], :include_blank => true %></noscript>
     </li>
   <% end %>
