--- a/app/views/staff/_form.html.erb
+++ b/app/views/staff/_form.html.erb
@@ -29,7 +29,8 @@
                  :input_html => { :size => 7, :multiple => true } %>
 
   <li id="staff_start_date_input" class="string required">
-    <%= form.input :start_date, :as => :string, :input_html => { :id => "datepicker" } %>
+    <%= form.input :start_date, :as => :string, 
+      :input_html => { :id => "datepicker" } %>
     <noscript><%= form.date_select :start_date, :order => [:day, :month, :year], :include_blank => true %></noscript>
   </li>
 
