--- a/app/views/reports/events.html.erb
+++ b/app/views/reports/events.html.erb
@@ -9,9 +9,8 @@
   <%= form_tag({}, { :method => :get }) do %>
     <p>
       <%= label_tag :start_date, "Start date: " %>
-      <script type='text/javascript'>
-        document.write("<%= escape_javascript calendar_date_select_tag(:start_date, @date, :time => false) %> <small>(click to select date)</small>");
-      </script>
+    <%= form.input :start_date, :as => :string, 
+      :input_html => { :id => "datepicker" } %>
       <noscript><%= date_select :start_date, nil, :order => [:day, :month, :year], :default => @date %></noscript>
     </p>
     <p><%= submit_tag 'View Report' %></p>
