--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <title><%= page_title(yield(:title)) %></title>
     <%= stylesheet_link_tag 'application', :media => 'screen' %>
-    <%= javascript_include_tag :application, :media => 'screen' %>
+    <%= javascript_include_tag 'application', :media => 'screen' %>
 
     <%= stylesheet_link_tag 'print', :media => 'print' %>
 
