--- a/app/views/availabilities/_form.html.erb
+++ b/app/views/availabilities/_form.html.erb
@@ -16,16 +16,14 @@
 
   <%= form.inputs :name => "Availability Details" do %>
     <li class="string required">
-      <%= form.label :start_date, "Start date " %><%= required_astrix %>
       <%= form.input :start_date, :as => :string, 
-        :input_html => { :id => "datepicker" } %>
+        :input_html => { :class => "datepicker" } %>
       <noscript><%= form.date_select :start_date, :order => [:day, :month, :year], :include_blank => true %></noscript>
     </li>
 
     <li class="string required">
-      <%= form.label :end_date, "End date " %><%= required_astrix %>
       <%= form.input :end_date, :as => :string, 
-        :input_html => { :id => "datepicker" } %>
+        :input_html => { :class => "datepicker" } %>
       <noscript><%= form.date_select :end_date, :order => [:day, :month, :year], :include_blank => true %></noscript>
     </li>
   <% end %>
