fix(Events): add raw HTML method call to fix flash message

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <% title "Viewing event details for: #{@event.name}" %>
-<%= display_notices_and_errors %>
+<%= raw display_notices_and_errors %>
 
 <p>
   <b>Name:</b> <%=h @event.name %> <br />
