--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <title><%= page_title(yield(:title)) %></title>
     <%= stylesheet_link_tag 'application', :media => 'screen' %>
     <%= javascript_include_tag 'application', :media => 'screen' %>
+    <%= javascript_include_tag :defaults %>
 
     <%= stylesheet_link_tag 'print', :media => 'print' %>
 
