fix(Layout): make 'powered by' message html safe

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 
       <div id="footer">
         Front of House Rostering, &copy;2009 Katipo Communications Ltd.<br />
-        <%= "Site powered by #{powered_by}" unless powered_by.blank? %>
+        <%= raw("Site powered by #{powered_by}") unless powered_by.blank? %>
       </div>
 
     </div>
