--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -4,7 +4,7 @@
     <%= form.semantic_errors %>
     <%= render 'form', :form => form %>
     <%= form.actions do %>
-        <%= label = (@event.conflicts_with_another_event? ? 'Ignore Conflicts and Create Event' : 'Create Event') %>
+        <% label = (@event.conflicts_with_another_event? ? 'Ignore Conflicts and Create Event' : 'Create Event') %>
             <%= form.action :submit, :label => label %>
     <% end %>
 <% end %>
